# world_cup_predictor

./: .gitignore  README.md  pyproject.toml
examples/: bookmaker_odds.csv  elo_rankings.csv  fifa_rankings.csv  fixtures.csv  international_results.csv
logics/: instructions.md
logics/backlog/: item_001_phase_0_credibiliser_le_world_cup_predictor_donnees_reelles_garde_fou_backtest.md  item_002_phase_1_reparer_le_modele_vectorisation_elo_glissant_calibration_battre_la_base_rate.md  item_003_phase_2_affiner_le_1x2_retrait_score_ponderation_temporelle_selection_modele_par_backtest.md  item_004_phase_3_optimiser_la_precision_1x2_par_validation_robuste_donnees_historiques_enrichies_et_tuning_marche.md  item_005_phase_3b_contexte_coupe_du_monde_et_variantes_elo_suivi_de_phase_3.md
logics/request/: req_000_phase_0_credibiliser_predictor.md  req_001_phase_1_reparer_modele.md  req_002_phase_2_affiner_1x2.md  req_003_phase_3_optimiser_precision_1x2.md
logics/tasks/: task_001_phase_0_credibiliser_le_world_cup_predictor_donnees_reelles_garde_fou_backtest.md  task_002_phase_1_reparer_le_modele_vectorisation_elo_glissant_calibration_battre_la_base_rate.md  task_003_phase_2_affiner_le_1x2_retrait_score_ponderation_temporelle_selection_modele_par_backtest.md  (+1 more)
scripts/: fetch_results.py  model_selection.py  walk_forward_validation.py
tests/: test_backtest.py  test_balance_features.py  test_dead_features.py  test_elo.py  test_features_vectorized.py  test_model_weights.py  test_reliability.py  test_walk_forward.py
web/: app.js  index.html  styles.css
(+15 files in other folders)
