[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "Pragmatic FIFA World Cup match outcome predictor for private prediction games."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
worldcup-predict = "worldcup_predictor.cli:main"
worldcup-backtest = "worldcup_predictor.backtest_cli:main"
worldcup-site = "worldcup_predictor.web_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
